Last commit Signed-off-by: joalopezmo <joalopezmo@uoc.edu>

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,5 @@
 <footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+    <a href="">&copy; Formulario</a> Por: Jorge A. Lopez M.
+</address>
+<p><i>Master fullstack EIP </i> </p>
 </footer>
