--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -11,8 +11,33 @@ body {
   font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 24px;
-  background-color: $uoc-bg;
   color: $uoc-corporate;
+
+  background: linear-gradient(-90deg, #1f1f1f, #f7f4c263, #e0f7c271, #c6f7c2);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  
+  @keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+  }
+
+ small{
+    font-size: 0.75rem;
+  }
+
+  .field{
+    margin:1rem;
+  }
+
+
 }
 
 .uoc-container {
